--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "An FCC Backend Challenge",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.0",
     "express": "^4.12.4",
-    "cors": "^2.8.0"
+    "moment": "^2.29.4",
+    "nodemon": "^3.0.1"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/freeCodeCamp/boilerplate-project-timestamp.git"
-  },
+
   "bugs": {
     "url": "https://github.com/freeCodeCamp/freeCodeCamp/issues"
   },
